--- a/README
+++ b/README
@@ -1,4 +1,7 @@
 This is your new Play application
 =================================
 
-This file will be packaged with your application, when using `activator dist`.
+Trams in warsaw.
+
+Url: http://quiet-chamber-9412.herokuapp.com/
+
